WIP: committing to save files

--- a/pom.xml
+++ b/pom.xml
@@ -50,7 +50,7 @@
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>2.9</version>
                 <configuration>
-                    <argLine>-Xmx10M</argLine>
+                    <argLine>-Xmx10m</argLine>
                 </configuration>
             </plugin>
 
